# ecoToken-SPL-Integration

./: Anchor.toml  README.md
programs/ecoMeme/: Cargo.toml
programs/ecoMeme/src/: lib.rs
tests/: ecoMeme.ts
