[package]
name = "ecoMeme"
version = "0.1.0"
description = "Converting meme tokens into positive impact for the planet."
license = "MIT OR Apache-2.0"
homepage = "https://ecotoken.earth"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "eco_meme"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.17.28"

[profile.release]
overflow-checks = true
